--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,8 +24,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "~/*": ["."],
-      "#/*": ["./src/components/*"],
-    },
+      "#/*": ["./src/components/*"]
+    }
   },
   "include": ["src"]
 }
