--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "format": "prettier . --write",
     "preview": "vite preview",
     "prepare": "husky",
-    "db": "npx json-server database.json"
+    "db": "npx json-server database.json",
+    "seed-db": "node seed-db.js"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.19",
     "axios": "^1.7.7",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
